<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4E3E3"
    tools:context=".WellFilterActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/bleach"
            style="@style/Base.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.021">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/base_cardview"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.511"
                tools:layout_editor_absoluteX="-55dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/fixed_layout"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

                    <ImageView
                        android:id="@+id/icon"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/bleach"
                        app:layout_constraintBottom_toBottomOf="@+id/fixed_layout"
                        app:layout_constraintEnd_toEndOf="@+id/fixed_layout"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/fixed_layout"
                        app:layout_constraintTop_toTopOf="@+id/fixed_layout"
                        app:layout_constraintVertical_bias="1.0" />

                    <TextView
                        android:id="@+id/heading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bleach"
                        android:textColor="@color/colorPrimary"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/fixed_layout"
                        app:layout_constraintEnd_toEndOf="@+id/fixed_layout"
                        app:layout_constraintHorizontal_bias="0.926"
                        app:layout_constraintStart_toStartOf="@+id/fixed_layout"
                        app:layout_constraintTop_toTopOf="@+id/fixed_layout"
                        app:layout_constraintVertical_bias="0.198" />

                    <TextView
                        android:id="@+id/list_of_steps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="58dp"
                        android:text="@string/steps"
                        android:textSize="20dp"
                        app:layout_constraintBottom_toBottomOf="@+id/fixed_layout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.878"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/heading"
                        app:layout_constraintVertical_bias="0.0" />

                    <!--This is ImageButton for the expansion icon.-->
                    <ImageButton
                        android:id="@+id/arrow_button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_expand_more_24"
                        app:layout_constraintBottom_toBottomOf="@id/fixed_layout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.802"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/list_of_steps"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--The following is the expandable portion whose
                    visibility is initially set to 'gone'.
                    The parent LinearLayout contains 3 child LinearLayouts
                    that hold a subject name and an icon each.-->
                <LinearLayout
                    android:id="@+id/hidden_view1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fixed_layout">

                    <!--Child LinearLayout 1-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/tbspn" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/addbleach"
                            android:textColor="#000000"
                            android:textSize="15dp" />
                    </LinearLayout>

                    <!--Child LinearLayout 2-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/bkt" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/restbkt"
                            android:textColor="#000000"
                            android:textSize="15dp" />
                    </LinearLayout>

                    <!--Child LinearLayout 3-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/drkwtr" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/drink"
                            android:textColor="#000000"
                            android:textSize="15dp" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>